# fastapi-boilerplate

./: .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml
src/: .env-example
src/app/: __init__.py  main.py  setup.py
src/app/configuration/: __init__.py
src/app/constants/: user.py
src/app/data/: database.py
src/app/data/crud/: token_blacklist.py  user.py
src/app/data/model/: token_blacklist.py  user.py
src/app/domain/: base_entities.py
src/app/domain/token_blacklist/: models.py
src/app/domain/user/: models.py  use_cases.py
src/app/middleware/: client_cache_middleware.py
src/app/routers/: dependencies.py
src/app/routers/v1/: __init__.py  auth_endpoints.py  user_endpoints.py
src/app/services/: security.py
tests/: conftest.py
tests/v1/: conftest.py
tests/v1/auth/: test_auth_endpoints.py
tests/v1/user/: test_user_endpoints.py
